// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printTree should visualize tree 1`] = `
"
├──bar
├──baz
├──foo
└──qux"
`;

exports[`printTree should visualize tree 2`] = `
"
└──[1m[34mfoo[39m[22m
   └──[1m[34mbar[39m[22m
      └──[1m[34mbaz[39m[22m
         └──qux"
`;

exports[`printTree should visualize tree 3`] = `
"
└──[1m[34mfoo[39m[22m
   ├──bar
   ├──baz
   └──qux"
`;

exports[`printTree should visualize tree 4`] = `
"
└──[1m[34mfoo[39m[22m
   ├──[1m[34mbar[39m[22m
   │  ├──a
   │  └──b
   ├──[1m[34mbaz[39m[22m
   │  ├──a
   │  └──b
   └──[1m[34mqux[39m[22m
      ├──a
      └──b"
`;

exports[`printTree should visualize tree 5`] = `
"
├──[1m[34mfoo[39m[22m
│  └──[1m[34mbar[39m[22m
│     └──[1m[34mbaz[39m[22m
│        └──qux
└──qux"
`;

exports[`printTree should visualize tree 6`] = `
"
├──[1m[34mbar[39m[22m
│  ├──[1m[34mfoo[39m[22m
│  │  └──foo.ts
│  └──bar.ts
└──foo.ts"
`;
